--- a/cb_medical_sale_invoice/i18n/es.po
+++ b/cb_medical_sale_invoice/i18n/es.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-07-13 09:49+0000\n"
-"PO-Revision-Date: 2018-07-13 09:49+0000\n"
+"POT-Creation-Date: 2018-11-07 10:18+0000\n"
+"PO-Revision-Date: 2018-11-07 10:18+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -32,6 +32,7 @@ msgid "Contact"
 msgstr "Contacto"
 
 #. module: cb_medical_sale_invoice
+#: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_account_invoice_encounter_id
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_account_invoice_line_encounter_id
 msgid "Encounter"
 msgstr "Afiliación"
@@ -44,7 +45,7 @@ msgstr "Factura"
 #. module: cb_medical_sale_invoice
 #: model:ir.model,name:cb_medical_sale_invoice.model_account_invoice_line
 msgid "Invoice Line"
-msgstr "Línea de factura"
+msgstr "Linea de Factura"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.ui.view,arch_db:cb_medical_sale_invoice.res_partner_view_form
@@ -66,6 +67,25 @@ msgstr "Afiliación"
 #: model:ir.model,name:cb_medical_sale_invoice.model_medical_request
 msgid "Medical request"
 msgstr "Medical request"
+
+#. module: cb_medical_sale_invoice
+#: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_medical_patient_invoice_nomenclature_id
+#: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_res_partner_invoice_nomenclature_id
+#: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_res_users_invoice_nomenclature_id
+msgid "Nomenclature"
+msgstr "Nomenclature"
+
+#. module: cb_medical_sale_invoice
+#: model:ir.model.fields,help:cb_medical_sale_invoice.field_medical_patient_invoice_nomenclature_id
+#: model:ir.model.fields,help:cb_medical_sale_invoice.field_res_partner_invoice_nomenclature_id
+#: model:ir.model.fields,help:cb_medical_sale_invoice.field_res_users_invoice_nomenclature_id
+msgid "Nomenclature for invoices"
+msgstr "Nomenclature for invoices"
+
+#. module: cb_medical_sale_invoice
+#: model:ir.ui.menu,name:cb_medical_sale_invoice.nomenclature_menu
+msgid "Nomenclatures"
+msgstr "Nomenclatures"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_account_invoice_line_patient_id
