--- a/cb_medical_sale_invoice/i18n/es.po
+++ b/cb_medical_sale_invoice/i18n/es.po
@@ -1,30 +1,32 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* cb_medical_sale_invoice
+# 	* cb_medical_sale_invoice
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-11-07 10:18+0000\n"
-"PO-Revision-Date: 2018-11-07 10:18+0000\n"
+"POT-Creation-Date: 2018-11-07 10:26+0000\n"
+"PO-Revision-Date: 2018-11-09 11:42+0100\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
+"Language: es\n"
+"X-Generator: Poedit 2.2\n"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.ui.view,arch_db:cb_medical_sale_invoice.report_invoice_document
 msgid "Authorization"
-msgstr "Authorization"
+msgstr "Autorización"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_account_invoice_line_authorization_number
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_sale_order_line_authorization_number
 msgid "Authorization Number"
-msgstr "Authorization Number"
+msgstr "Numero de autorización"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.model,name:cb_medical_sale_invoice.model_res_partner
@@ -50,7 +52,7 @@ msgstr "Linea de Factura"
 #. module: cb_medical_sale_invoice
 #: model:ir.ui.view,arch_db:cb_medical_sale_invoice.res_partner_view_form
 msgid "Invoice configuration"
-msgstr "Invoice configuration"
+msgstr "Configuracion de facturas"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_account_invoice_is_medical
@@ -66,26 +68,26 @@ msgstr "Afiliación"
 #. module: cb_medical_sale_invoice
 #: model:ir.model,name:cb_medical_sale_invoice.model_medical_request
 msgid "Medical request"
-msgstr "Medical request"
+msgstr "Petición"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_medical_patient_invoice_nomenclature_id
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_res_partner_invoice_nomenclature_id
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_res_users_invoice_nomenclature_id
 msgid "Nomenclature"
-msgstr "Nomenclature"
+msgstr "Nomenclatura"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.model.fields,help:cb_medical_sale_invoice.field_medical_patient_invoice_nomenclature_id
 #: model:ir.model.fields,help:cb_medical_sale_invoice.field_res_partner_invoice_nomenclature_id
 #: model:ir.model.fields,help:cb_medical_sale_invoice.field_res_users_invoice_nomenclature_id
 msgid "Nomenclature for invoices"
-msgstr "Nomenclature for invoices"
+msgstr "Nomenclatura de facturas"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.ui.menu,name:cb_medical_sale_invoice.nomenclature_menu
 msgid "Nomenclatures"
-msgstr "Nomenclatures"
+msgstr "Nomenclaturas"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_account_invoice_line_patient_id
@@ -98,12 +100,12 @@ msgstr "Paciente"
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_sale_order_line_patient_name
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_sale_order_patient_name
 msgid "Patient Name"
-msgstr "Patient Name"
+msgstr "Nombre del paciente"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.ui.view,arch_db:cb_medical_sale_invoice.res_partner_view_form
 msgid "Payor"
-msgstr "Payor"
+msgstr "Mutua"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.model,name:cb_medical_sale_invoice.model_sale_order
@@ -121,7 +123,7 @@ msgstr "Línea de orden de ventas"
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_res_partner_show_authorization
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_res_users_show_authorization
 msgid "Show Authorization"
-msgstr "Show Authorization"
+msgstr "Mostrar autorización"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_account_invoice_show_patient
@@ -129,7 +131,7 @@ msgstr "Show Authorization"
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_res_partner_show_patient
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_res_users_show_patient
 msgid "Show Patient"
-msgstr "Show Patient"
+msgstr "Mostrar paciente"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_account_invoice_show_subscriber
@@ -137,7 +139,7 @@ msgstr "Show Patient"
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_res_partner_show_subscriber
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_res_users_show_subscriber
 msgid "Show Subscriber"
-msgstr "Show Subscriber"
+msgstr "Mostrar suscriptor"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_account_invoice_line_subscriber_id
@@ -145,5 +147,4 @@ msgstr "Show Subscriber"
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_sale_order_subscriber_id
 #: model:ir.ui.view,arch_db:cb_medical_sale_invoice.report_invoice_document
 msgid "Subscriber"
-msgstr "Subscriber"
-
+msgstr "Abonado"
