--- a/cb_medical_sale_discount/i18n/es.po
+++ b/cb_medical_sale_discount/i18n/es.po
@@ -1,19 +1,21 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* cb_medical_sale_discount
+# 	* cb_medical_sale_discount
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-11-07 10:18+0000\n"
-"PO-Revision-Date: 2018-11-07 10:18+0000\n"
+"POT-Creation-Date: 2018-11-07 10:26+0000\n"
+"PO-Revision-Date: 2018-11-09 12:07+0100\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
+"Language: es\n"
+"X-Generator: Poedit 2.2\n"
 
 #. module: cb_medical_sale_discount
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_sale_discount_active
@@ -23,7 +25,7 @@ msgstr "Activo"
 #. module: cb_medical_sale_discount
 #: model:ir.model,name:cb_medical_sale_discount.model_medical_request_group_discount
 msgid "Add discount on a request group"
-msgstr "Add discount on a request group"
+msgstr "Añadir descuento en Acto medico"
 
 #. module: cb_medical_sale_discount
 #: model:ir.ui.view,arch_db:cb_medical_sale_discount.medical_request_group_discount_form
@@ -35,7 +37,7 @@ msgstr "Aplicar"
 #: model:ir.ui.view,arch_db:cb_medical_sale_discount.medical_request_group_discount_form
 #: model:ir.ui.view,arch_db:cb_medical_sale_discount.medical_request_group_form
 msgid "Apply discount"
-msgstr "Apply discount"
+msgstr "Aplicar descuento"
 
 #. module: cb_medical_sale_discount
 #: model:ir.ui.view,arch_db:cb_medical_sale_discount.medical_sale_discount_search
@@ -74,7 +76,7 @@ msgstr "Descripción"
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_request_group_discount
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_request_group_discount_discount
 msgid "Discount"
-msgstr "Discount"
+msgstr "Descuento"
 
 #. module: cb_medical_sale_discount
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_request_group_discount_display_name
@@ -86,25 +88,25 @@ msgstr "Nombre mostrado"
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_request_group_discount_id
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_sale_discount_id
 msgid "ID"
-msgstr "ID (identificación)"
+msgstr "ID"
 
 #. module: cb_medical_sale_discount
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_request_group_discount_is_fixed
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_sale_discount_is_fixed
 msgid "Is Fixed"
-msgstr "Is Fixed"
+msgstr "Está arreglado"
 
 #. module: cb_medical_sale_discount
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_request_group_discount___last_update
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_sale_discount___last_update
 msgid "Last Modified on"
-msgstr "Última modificación el"
+msgstr "Última modificación en"
 
 #. module: cb_medical_sale_discount
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_request_group_discount_write_uid
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_sale_discount_write_uid
 msgid "Last Updated by"
-msgstr "Última actualización por"
+msgstr "Última actualización de"
 
 #. module: cb_medical_sale_discount
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_request_group_discount_write_date
@@ -117,7 +119,7 @@ msgstr "Última actualización en"
 #: model:ir.model,name:cb_medical_sale_discount.model_medical_sale_discount
 #: model:ir.ui.menu,name:cb_medical_sale_discount.medical_sale_discount_menu
 msgid "Medical Discounts"
-msgstr "Medical Discounts"
+msgstr "Descuentos"
 
 #. module: cb_medical_sale_discount
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_careplan_medical_sale_discount_id
@@ -130,23 +132,23 @@ msgstr "Medical Discounts"
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_request_medical_sale_discount_id
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_sale_order_line_medical_sale_discount_id
 msgid "Medical Sale Discount"
-msgstr "Medical Sale Discount"
+msgstr "Descuento de venta"
 
 #. module: cb_medical_sale_discount
 #: model:ir.ui.view,arch_db:cb_medical_sale_discount.medical_sale_discount_form
 msgid "Medical discount"
-msgstr "Medical discount"
+msgstr "Descuento"
 
 #. module: cb_medical_sale_discount
 #: model:ir.ui.view,arch_db:cb_medical_sale_discount.medical_sale_discount_search
 #: model:ir.ui.view,arch_db:cb_medical_sale_discount.medical_sale_discount_tree
 msgid "Medical discounts"
-msgstr "Medical discounts"
+msgstr "Descuento"
 
 #. module: cb_medical_sale_discount
 #: model:ir.model,name:cb_medical_sale_discount.model_medical_request
 msgid "Medical request"
-msgstr "Medical request"
+msgstr "Petición"
 
 #. module: cb_medical_sale_discount
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_sale_discount_name
@@ -157,20 +159,19 @@ msgstr "Nombre"
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_request_group_discount_percentage
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_sale_discount_percentage
 msgid "Percentage"
-msgstr "Percentage"
+msgstr "Porcentaje"
 
 #. module: cb_medical_sale_discount
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_request_group_discount_request_group_id
 msgid "Request Group"
-msgstr "Servicio"
+msgstr "Acto medico"
 
 #. module: cb_medical_sale_discount
 #: model:res.groups,name:cb_medical_sale_discount.group_medical_sale_discount_manager
 msgid "Sale discount manager"
-msgstr "Sale discount manager"
+msgstr "Gerente de descuento venta"
 
 #. module: cb_medical_sale_discount
 #: model:ir.model,name:cb_medical_sale_discount.model_sale_order_line
 msgid "Sales Order Line"
 msgstr "Línea de orden de ventas"
-
