--- a/cb_medical_workflow_plandefinition/i18n/es.po
+++ b/cb_medical_workflow_plandefinition/i18n/es.po
@@ -1,25 +1,27 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* cb_medical_workflow_plandefinition
+# 	* cb_medical_workflow_plandefinition
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-11-07 10:18+0000\n"
-"PO-Revision-Date: 2018-11-07 10:18+0000\n"
+"POT-Creation-Date: 2018-11-07 10:26+0000\n"
+"PO-Revision-Date: 2018-11-09 12:15+0100\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: \n"
+"Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
+"Language: es\n"
+"X-Generator: Poedit 2.2\n"
 
 #. module: cb_medical_workflow_plandefinition
 #: code:addons/cb_medical_workflow_plandefinition/models/workflow_plan_definition.py:51
 #, python-format
 msgid "Action cannot be billable on third party plans"
-msgstr "Action cannot be billable on third party plans"
+msgstr "La acción no puede ser facturable en planes de terceros"
 
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_careplan_active
@@ -57,7 +59,7 @@ msgstr "Centro"
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_request_group_is_breakdown
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_request_is_breakdown
 msgid "Is Breakdown"
-msgstr "Is Breakdown"
+msgstr "Es desglose"
 
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_careplan_is_billable
@@ -70,7 +72,7 @@ msgstr "Is Breakdown"
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_workflow_plan_definition_action_is_billable
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_workflow_plan_definition_is_billable
 msgid "Is billable?"
-msgstr "Is billable?"
+msgstr "Es facturable?"
 
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model,name:cb_medical_workflow_plandefinition.model_workflow_plan_definition_action
@@ -80,23 +82,23 @@ msgstr "Acción"
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model,name:cb_medical_workflow_plandefinition.model_medical_request
 msgid "Medical request"
-msgstr "Medical request"
+msgstr "Peticion"
 
 #. module: cb_medical_workflow_plandefinition
 #: code:addons/cb_medical_workflow_plandefinition/models/workflow_plan_definition.py:44
 #, python-format
 msgid "Only one action is allowed for third party plans"
-msgstr "Only one action is allowed for third party plans"
+msgstr "Solo se permite una acción para planes de terceros"
 
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_workflow_activity_definition_performer_id
 msgid "Performer"
-msgstr "Performer"
+msgstr "Ejecutante"
 
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_workflow_plan_definition_performer_required
 msgid "Performer Required"
-msgstr "Performer Required"
+msgstr "Ejecutante necesario"
 
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model,name:cb_medical_workflow_plandefinition.model_workflow_plan_definition
@@ -106,7 +108,7 @@ msgstr "Plan"
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_workflow_plan_definition_is_breakdown
 msgid "Possible breakdown?"
-msgstr "Possible breakdown?"
+msgstr "Posible desglose?"
 
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model,name:cb_medical_workflow_plandefinition.model_medical_procedure_request
@@ -127,22 +129,21 @@ msgstr "Servicio"
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_request_group_third_party_bill
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_request_third_party_bill
 msgid "Third Party Bill"
-msgstr "Third Party Bill"
+msgstr "Proyecto de ley de terceros"
 
 #. module: cb_medical_workflow_plandefinition
 #: code:addons/cb_medical_workflow_plandefinition/models/workflow_plan_definition.py:36
 #, python-format
 msgid "Third party plans cannot be broken"
-msgstr "Third party plans cannot be broken"
+msgstr "Los planes de terceros no pueden romperse"
 
 #. module: cb_medical_workflow_plandefinition
 #: code:addons/cb_medical_workflow_plandefinition/models/workflow_plan_definition.py:40
 #, python-format
 msgid "Third party plans must be billable"
-msgstr "Third party plans must be billable"
+msgstr "Los planes de terceros deben ser facturables"
 
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_workflow_plan_definition_third_party_bill
 msgid "Will be payed to the third party?"
-msgstr "Will be payed to the third party?"
-
+msgstr "Se pagará al tercero?"
