--- a/cb_medical_sale_discount/i18n/es.po
+++ b/cb_medical_sale_discount/i18n/es.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-07 10:26+0000\n"
-"PO-Revision-Date: 2018-11-09 12:07+0100\n"
+"PO-Revision-Date: 2018-11-13 16:50+0100\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
 "Language: es\n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.0.6\n"
 
 #. module: cb_medical_sale_discount
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_sale_discount_active
@@ -25,7 +25,7 @@ msgstr "Activo"
 #. module: cb_medical_sale_discount
 #: model:ir.model,name:cb_medical_sale_discount.model_medical_request_group_discount
 msgid "Add discount on a request group"
-msgstr "Añadir descuento en Acto medico"
+msgstr "Añadir descuento"
 
 #. module: cb_medical_sale_discount
 #: model:ir.ui.view,arch_db:cb_medical_sale_discount.medical_request_group_discount_form
@@ -94,7 +94,7 @@ msgstr "ID"
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_request_group_discount_is_fixed
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_sale_discount_is_fixed
 msgid "Is Fixed"
-msgstr "Está arreglado"
+msgstr "Es fijo"
 
 #. module: cb_medical_sale_discount
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_request_group_discount___last_update
@@ -164,7 +164,7 @@ msgstr "Porcentaje"
 #. module: cb_medical_sale_discount
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_request_group_discount_request_group_id
 msgid "Request Group"
-msgstr "Acto medico"
+msgstr "Acto Médico"
 
 #. module: cb_medical_sale_discount
 #: model:res.groups,name:cb_medical_sale_discount.group_medical_sale_discount_manager
