--- a/cb_medical_sale_invoice/i18n/es.po
+++ b/cb_medical_sale_invoice/i18n/es.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-07 10:26+0000\n"
-"PO-Revision-Date: 2018-11-09 11:42+0100\n"
+"PO-Revision-Date: 2018-11-13 16:51+0100\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
 "Language: es\n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.0.6\n"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.ui.view,arch_db:cb_medical_sale_invoice.report_invoice_document
@@ -26,7 +26,7 @@ msgstr "Autorización"
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_account_invoice_line_authorization_number
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_sale_order_line_authorization_number
 msgid "Authorization Number"
-msgstr "Numero de autorización"
+msgstr "Número de autorización"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.model,name:cb_medical_sale_invoice.model_res_partner
@@ -139,7 +139,7 @@ msgstr "Mostrar paciente"
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_res_partner_show_subscriber
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_res_users_show_subscriber
 msgid "Show Subscriber"
-msgstr "Mostrar suscriptor"
+msgstr "Mostrar número de asegurado"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_account_invoice_line_subscriber_id
@@ -147,4 +147,4 @@ msgstr "Mostrar suscriptor"
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_sale_order_subscriber_id
 #: model:ir.ui.view,arch_db:cb_medical_sale_invoice.report_invoice_document
 msgid "Subscriber"
-msgstr "Abonado"
+msgstr "Asegurado"
