--- a/cb_medical_workflow_plandefinition/i18n/es.po
+++ b/cb_medical_workflow_plandefinition/i18n/es.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-11-07 10:26+0000\n"
-"PO-Revision-Date: 2018-11-09 12:15+0100\n"
+"PO-Revision-Date: 2018-11-13 17:42+0100\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -15,13 +15,13 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: \n"
 "Language: es\n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.0.6\n"
 
 #. module: cb_medical_workflow_plandefinition
 #: code:addons/cb_medical_workflow_plandefinition/models/workflow_plan_definition.py:51
 #, python-format
 msgid "Action cannot be billable on third party plans"
-msgstr "La acción no puede ser facturable en planes de terceros"
+msgstr "La acción no se puede facturar como pedido de terceros"
 
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_careplan_active
@@ -59,7 +59,7 @@ msgstr "Centro"
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_request_group_is_breakdown
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_request_is_breakdown
 msgid "Is Breakdown"
-msgstr "Es desglose"
+msgstr "Rompible en subservicios"
 
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_careplan_is_billable
@@ -82,23 +82,23 @@ msgstr "Acción"
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model,name:cb_medical_workflow_plandefinition.model_medical_request
 msgid "Medical request"
-msgstr "Peticion"
+msgstr "Petición"
 
 #. module: cb_medical_workflow_plandefinition
 #: code:addons/cb_medical_workflow_plandefinition/models/workflow_plan_definition.py:44
 #, python-format
 msgid "Only one action is allowed for third party plans"
-msgstr "Solo se permite una acción para planes de terceros"
+msgstr "Solo se permite una acción para pedidos de terceros"
 
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_workflow_activity_definition_performer_id
 msgid "Performer"
-msgstr "Ejecutante"
+msgstr "Realizador"
 
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_workflow_plan_definition_performer_required
 msgid "Performer Required"
-msgstr "Ejecutante necesario"
+msgstr "Realizador obligatorio"
 
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model,name:cb_medical_workflow_plandefinition.model_workflow_plan_definition
@@ -108,7 +108,7 @@ msgstr "Plan"
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_workflow_plan_definition_is_breakdown
 msgid "Possible breakdown?"
-msgstr "Posible desglose?"
+msgstr "Rompible en subservicios?"
 
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model,name:cb_medical_workflow_plandefinition.model_medical_procedure_request
@@ -118,7 +118,7 @@ msgstr "Petición"
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model,name:cb_medical_workflow_plandefinition.model_medical_request_group
 msgid "Request Group"
-msgstr "Servicio"
+msgstr "Acto Médico"
 
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_careplan_third_party_bill
@@ -129,21 +129,21 @@ msgstr "Servicio"
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_request_group_third_party_bill
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_request_third_party_bill
 msgid "Third Party Bill"
-msgstr "Proyecto de ley de terceros"
+msgstr "Factura de terceros"
 
 #. module: cb_medical_workflow_plandefinition
 #: code:addons/cb_medical_workflow_plandefinition/models/workflow_plan_definition.py:36
 #, python-format
 msgid "Third party plans cannot be broken"
-msgstr "Los planes de terceros no pueden romperse"
+msgstr "Los pedidos de terceros no pueden romberse"
 
 #. module: cb_medical_workflow_plandefinition
 #: code:addons/cb_medical_workflow_plandefinition/models/workflow_plan_definition.py:40
 #, python-format
 msgid "Third party plans must be billable"
-msgstr "Los planes de terceros deben ser facturables"
+msgstr "Los pedidos de terceros deben ser facturables"
 
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_workflow_plan_definition_third_party_bill
 msgid "Will be payed to the third party?"
-msgstr "Se pagará al tercero?"
+msgstr "¿Se pagará directamente a un tercero?"
