--- a/cb_medical_workflow_plandefinition/i18n/es.po
+++ b/cb_medical_workflow_plandefinition/i18n/es.po
@@ -1,21 +1,19 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# 	* cb_medical_workflow_plandefinition
+#	* cb_medical_workflow_plandefinition
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-11-07 10:26+0000\n"
-"PO-Revision-Date: 2018-11-13 17:42+0100\n"
+"POT-Creation-Date: 2018-11-14 08:31+0000\n"
+"PO-Revision-Date: 2018-11-14 08:31+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
-"Language: es\n"
-"X-Generator: Poedit 2.0.6\n"
 
 #. module: cb_medical_workflow_plandefinition
 #: code:addons/cb_medical_workflow_plandefinition/models/workflow_plan_definition.py:51
@@ -40,13 +38,8 @@ msgid "Activity Definition"
 msgstr "Actividad"
 
 #. module: cb_medical_workflow_plandefinition
-#: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_careplan_center_id
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_document_reference_center_id
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_laboratory_request_center_id
-#: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_medication_request_center_id
-#: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_procedure_request_center_id
-#: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_request_center_id
-#: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_medical_request_group_center_id
 msgid "Center"
 msgstr "Centro"
 
@@ -82,7 +75,7 @@ msgstr "Acción"
 #. module: cb_medical_workflow_plandefinition
 #: model:ir.model,name:cb_medical_workflow_plandefinition.model_medical_request
 msgid "Medical request"
-msgstr "Petición"
+msgstr "Medical request"
 
 #. module: cb_medical_workflow_plandefinition
 #: code:addons/cb_medical_workflow_plandefinition/models/workflow_plan_definition.py:44
@@ -147,3 +140,4 @@ msgstr "Los pedidos de terceros deben ser facturables"
 #: model:ir.model.fields,field_description:cb_medical_workflow_plandefinition.field_workflow_plan_definition_third_party_bill
 msgid "Will be payed to the third party?"
 msgstr "¿Se pagará directamente a un tercero?"
+
