--- a/cb_medical_sale_discount/i18n/es.po
+++ b/cb_medical_sale_discount/i18n/es.po
@@ -1,21 +1,19 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# 	* cb_medical_sale_discount
+#	* cb_medical_sale_discount
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-11-07 10:26+0000\n"
-"PO-Revision-Date: 2018-11-13 16:50+0100\n"
+"POT-Creation-Date: 2018-11-14 08:30+0000\n"
+"PO-Revision-Date: 2018-11-14 08:30+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
-"Language: es\n"
-"X-Generator: Poedit 2.0.6\n"
 
 #. module: cb_medical_sale_discount
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_sale_discount_active
@@ -100,19 +98,19 @@ msgstr "Es fijo"
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_request_group_discount___last_update
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_sale_discount___last_update
 msgid "Last Modified on"
-msgstr "Última modificación en"
+msgstr "Última modificación el"
 
 #. module: cb_medical_sale_discount
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_request_group_discount_write_uid
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_sale_discount_write_uid
 msgid "Last Updated by"
-msgstr "Última actualización de"
+msgstr "Última actualización por"
 
 #. module: cb_medical_sale_discount
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_request_group_discount_write_date
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_sale_discount_write_date
 msgid "Last Updated on"
-msgstr "Última actualización en"
+msgstr "Última actualización el"
 
 #. module: cb_medical_sale_discount
 #: model:ir.actions.act_window,name:cb_medical_sale_discount.medical_sale_discount_action
@@ -148,7 +146,7 @@ msgstr "Descuento"
 #. module: cb_medical_sale_discount
 #: model:ir.model,name:cb_medical_sale_discount.model_medical_request
 msgid "Medical request"
-msgstr "Petición"
+msgstr "Medical request"
 
 #. module: cb_medical_sale_discount
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_sale_discount_name
@@ -164,7 +162,7 @@ msgstr "Porcentaje"
 #. module: cb_medical_sale_discount
 #: model:ir.model.fields,field_description:cb_medical_sale_discount.field_medical_request_group_discount_request_group_id
 msgid "Request Group"
-msgstr "Acto Médico"
+msgstr "Acto medico"
 
 #. module: cb_medical_sale_discount
 #: model:res.groups,name:cb_medical_sale_discount.group_medical_sale_discount_manager
@@ -174,4 +172,5 @@ msgstr "Gerente de descuento venta"
 #. module: cb_medical_sale_discount
 #: model:ir.model,name:cb_medical_sale_discount.model_sale_order_line
 msgid "Sales Order Line"
-msgstr "Línea de orden de ventas"
+msgstr "Línea de pedido de ventas"
+
