--- a/cb_medical_sale_invoice/i18n/es.po
+++ b/cb_medical_sale_invoice/i18n/es.po
@@ -1,21 +1,19 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# 	* cb_medical_sale_invoice
+#	* cb_medical_sale_invoice
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 11.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-11-07 10:26+0000\n"
-"PO-Revision-Date: 2018-11-13 16:51+0100\n"
+"POT-Creation-Date: 2018-11-14 08:31+0000\n"
+"PO-Revision-Date: 2018-11-14 08:31+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: \n"
 "Plural-Forms: \n"
-"Language: es\n"
-"X-Generator: Poedit 2.0.6\n"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.ui.view,arch_db:cb_medical_sale_invoice.report_invoice_document
@@ -68,7 +66,7 @@ msgstr "Afiliación"
 #. module: cb_medical_sale_invoice
 #: model:ir.model,name:cb_medical_sale_invoice.model_medical_request
 msgid "Medical request"
-msgstr "Petición"
+msgstr "Medical request"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_medical_patient_invoice_nomenclature_id
@@ -115,7 +113,7 @@ msgstr "Presupuesto"
 #. module: cb_medical_sale_invoice
 #: model:ir.model,name:cb_medical_sale_invoice.model_sale_order_line
 msgid "Sales Order Line"
-msgstr "Línea de orden de ventas"
+msgstr "Línea de pedido de ventas"
 
 #. module: cb_medical_sale_invoice
 #: model:ir.model.fields,field_description:cb_medical_sale_invoice.field_account_invoice_show_authorization
@@ -148,3 +146,4 @@ msgstr "Mostrar número de asegurado"
 #: model:ir.ui.view,arch_db:cb_medical_sale_invoice.report_invoice_document
 msgid "Subscriber"
 msgstr "Asegurado"
+
